# antigravity-provider

./: package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
plugin/: config.json  plugin.json
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml
src-tauri/src/: credentials.rs  main.rs  token_refresh.rs
src-tauri/src/api/: code_assist.rs  mod.rs
src-tauri/src/auth/: mod.rs  oauth.rs
src/components/CredentialCard/: CardActions.tsx  CardHeader.tsx  CardStats.tsx  index.tsx  types.ts
src/types/: plugin-components.d.ts  proxycast-plugin-components.d.ts
